# music_reports_app

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c8a68131571_initital_revision.py  3f586067d50d_change_id_type_uuid_integer.py  4f941e4abcf2_modified_report_used_music_field.py  6a19ea7f6aac_add_taskqueue_model.py  6c0d29f89467_fixed_relationship_back_populates_in_.py  88137cde4f15_add_taskqueue_model_del_fields_in_.py
backend/api/: __init__.py  dependencies.py  routes.py
backend/api/v1/: __init__.py  base_crud_router.py  music_routes.py  report_routes.py  source_file_routes.py  task_queue_routes.py
backend/core/: config.py
backend/core/models/: __init__.py  base.py  db_manager.py  music.py  report.py  source_file.py  task_queue.py
backend/core/repositories/: __init__.py  base.py  music.py  report_repository.py  source_file.py  source_file_repository.py  task_queue.py
backend/core/schemas/: __init__.py  api_response.py  music.py  report.py  report_schemas.py  source_file.py  task_queue.py
backend/core/services/: base.py  music.py  report.py  source_file.py  task_queue.py
backend/middleware/: request_middleware.py
backend/proccessing/: audio_tools.py
backend/proccessing/parser/: dto.py  parsers.py
backend/processing/: config.py  data_filter.py  exceptions.py  exeptions.py  logger.py  processor.py  report_generator.py  report_template.xlsx  worker.py
backend/utils/: files_tools.py  timecode_converter.py
(+26 files in other folders)
