[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic-settings = "^2.7.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
asyncpg = "^0.30.0"
alembic = "^1.14.1"
psycopg2 = "^2.9.10"
black = "^25.1.0"
isort = "^6.0.1"
wavinfo = "^3.1.0"
openpyxl = "^3.1.5"
